--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="product.html">See all Bed Pillows(9)</a>
                 </div>
             </div>
-            <div class="grid-item section1">
+            <a href="SpecificProduct.html"><div class="grid-item section1">
                 <div class="productImg"><img src="pillow1.png" alt="bedpilow"></div>
                 <div class="productInfo">
                     <h4>The Original</h4>
@@ -42,23 +42,23 @@
                     
                 </div>
                 <div class="addButton"><img src="addButton.png" alt="bedpilow"></div>
-            </div> 
-            <div class="grid-item section1">
+            </div></a>
+            <a href="SpecificProduct.html"><div class="grid-item section1">
                 <div class="productImg"><img src="pillow4.png" alt="bedpilow"></div>
                 <div class="productInfo">
-                    <h4>The Original</h4>
-                    <h6>20inx20in / $40</h6>
+                    <h4>Ice cream</h4>
+                    <h6>30inx30in / $50</h6>
                 </div>
                 <div class="addButton"><img src="addButton.png" alt="bedpilow"></div>
-            </div>
-            <div class="grid-item section1">
+            </div></a>
+            <a href="SpecificProduct.html"><div class="grid-item section1">
                 <div class="productImg"><img src="pillow3.png" alt="bedpilow"></div>
                 <div class="productInfo">
-                    <h4>The Original</h4>
-                    <h6>20inx20in / $40</h6>
+                    <h4>Astronut</h4>
+                    <h6>60inx10in / $30</h6>
                 </div>
                 <div class="addButton"><img src="addButton.png" alt="bedpilow"></div>
-            </div>
+            </div></a>
             <div class="grid-item section2">
                 <h2>Couch Pillow</h2>
                 <h4>The soft companies for your friends and family to enjoy a lovely time.</h4>
@@ -79,16 +79,16 @@
             <div class="grid-item section2">
                 <div class="productImg"><img src="pillow4.png" alt="bedpilow"></div>
                 <div class="productInfo">
-                    <h4>The Original</h4>
-                    <h6>20inx20in / $40</h6>
+                    <h4>Ice cream</h4>
+                    <h6>30inx30in / $50</h6>
                 </div>
                 <div class="addButton"><img src="addButton.png" alt="bedpilow"></div>
             </div>
             <div class="grid-item section2">
                 <div class="productImg"><img src="pillow3.png" alt="bedpilow"></div>
                 <div class="productInfo">
-                    <h4>The Original</h4>
-                    <h6>20inx20in / $40</h6>
+                    <h4>Astronut</h4>
+                    <h6>60inx10in / $30</h6>
                 </div>
                 <div class="addButton"><img src="addButton.png" alt="bedpilow"></div>
             </div>
@@ -111,16 +111,16 @@
             <div class="grid-item section3">
                 <div class="productImg"><img src="pillow4.png" alt="bedpilow"></div>
                 <div class="productInfo">
-                    <h4>The Original</h4>
-                    <h6>20inx20in / $40</h6>
+                    <h4>Ice cream</h4>
+                    <h6>30inx30in / $50</h6>
                 </div>
                 <div class="addButton"><img src="addButton.png" alt="bedpilow"></div>
             </div>
             <div class="grid-item section3">
                 <div class="productImg"><img src="pillow3.png" alt="bedpilow"></div>
                 <div class="productInfo">
-                    <h4>The Original</h4>
-                    <h6>20inx20in / $40</h6>
+                    <h4>Astronut</h4>
+                    <h6>60inx10in / $30</h6>
                 </div>
                 <div class="addButton"><img src="addButton.png" alt="bedpilow"></div>
             </div>
