--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#product">Products</a></li>
                 <li><a href="about.html">About</a></li>
+                <li id = 'cartLink'><a href="cart.html">Cart</a></li>
+
             </ul>  
         </nav>
         <div class="hero-text">
@@ -119,7 +121,7 @@
             <div class="grid-item section3">
                 <div class="productImg"><img src="pillow3.png" alt="bedpilow"></div>
                 <div class="productInfo">
-                    <h4>Astronut</h4>
+                    <h4>Astronaut</h4>
                     <h6>60inx10in / $30</h6>
                 </div>
                 <div class="addButton"><img src="addButton.png" alt="bedpilow"></div>
