--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="main.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,6 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href= "index.html#product">Products</a></li>
                 <li><a href="about.html">About</a></li>
+                <li id = 'cartLink'><a href="cart.html">Cart</a></li>
             </ul>  
         </nav>
         <div class="hero-text">
