--- a/assgn6​/cart.html
+++ b/assgn6​/cart.html
@@ -16,7 +16,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#product">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li id = 'cartLink'><a href="cart.html">Cart</a></li>
+            <li class = 'cartLink' onclick ="addPillow()"><a href="cart.html">Cart</a></li>
         </ul>  
     </nav>
     
@@ -25,52 +25,27 @@
     </div>
 </header>
 
-<body>
+<body id = "cart-section" onload="addPillow()">
    
-    <div class="cart-container">
-        <div class="cart-item">Product
-            <div class="cartContent"><img src="pillow4.png" alt="bedpilow"></div>
+    <div class="cart-header" id = "cartheader">
+        <div class="cart-name">Product
         </div>
-        <div class="cart-item">Color
-            <div class="cartContent">
-                    <select>
-                        <option value="volvo">After School Special</option>
-                        <option value="saab">Morning Haze</option>
-                        <option value="opel">Rainy Day</option>
-                    </select>
-            </div>
+        <div class="cart-name">Color
         </div>
-        <div class="cart-item foam">Foam
-            <div class="cartContent">
-                <select>
-                    <option value="volvo">Duck Down</option>
-                    <option value="saab">Memory Foam </option>
-                    <option value="opel">Hypoallergenic Poly-blend</option>
-                </select>
-            </div>
+        <div class="cart-name foam">Foam
         </div>
 
-        <div class="cart-item quantity">Quantity
-            <div class="cartContent">
-                <select>
-                    <option value="volvo">1</option>
-                    <option value="saab">2</option>
-                    <option value="opel">3</option>
-                    <option value="opel">4</option>
-                </select>
-            </div>
+        <div class="cart-name quantity">Quantity
         </div>
-        <div class="cart-item price">Price
-            <div class="cartContent">
-                <p id = "cartPrice"> $87.00 </p>
-            </div>
+        <div class="cart-name price">Price
         </div>
-        <div class="cart-item quantity">x</div>
     </div>
+
+
 
     <div id="totalPrice">
             <h3>Total:</h3>
-            <h4>$100.00</h4>
+            <h4 id = "total">$100.00</h4>
     </div>
 
     <div id="checkout">
