--- a/assgn6​/index.html
+++ b/assgn6​/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -16,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#product">Products</a></li>
                 <li><a href="about.html">About</a></li>
-                <li id = 'cartLink'><a href="cart.html">Cart</a></li>
+                <li class = 'cartLink'><a href="cart.html">Cart</a></li>
 
             </ul>  
         </nav>
@@ -27,7 +28,7 @@
     </div>
 </header>
 
-<body>
+<body onload="updateCartNum()">
     <div class="grid-container">
             <div id= "product" class="grid-item section1">
                 <h2>Bed Pillow</h2>
